--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <head>
     <title>Bio website</title>
     <!-- Last style sheet is applied first! -->
-    <link rel="stylesheet" type="text/css" href="bootstrap.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
 
@@ -32,19 +32,12 @@
       </div>
       <div class="row">
         <div class="col-lg-2">
-          <div class="card bg-light mb-3" style="max-width: 20rem;">
-            <div class="card-header">Title here</div>
-            <div class="card-body">
-              <h4 class="card-title">Write some text here...</h4>
-              <p class="card-text">Click here to see...</p>
-            </div>
-          </div>
+        </div>
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-4">
         </div>
         <div class="col-lg-2">
-        </div>
-        <div class="col-lg-4">
-        </div>
-        <div class="col-lg-4">
         </div>
       </div>
     </div>
